[metadata]
name = line6control
version = 0.3

[options]
packages = find:
install_requires =
  PyGObject
  pycairo

[options.data_files]
share/line6control =
    line6control/data/line6control.glade
    line6control/data/knob.png
    line6control/data/knob_bg.png
    line6control/data/switch.png

[options.entry_points]
console_scripts =
  line6control = line6control.line6control:main
